object: Don't try to poke at a vfunc pointer in a class that doesn't have it

If a class introduces the vfunc, then we don't have a parent to compare
it against to check see it's unchanged, and we know it isn't.

This prevents poking in invalid memory and causing valgrind to spew
and potentially a crash.

https://bugzilla.gnome.org/show_bug.cgi?id=719865